--- a/bundle/app.css
+++ b/bundle/app.css
@@ -528,6 +528,15 @@ a:hover {
   background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(31, 30, 52, 1));
 }
 
+#background-opacity{
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(31, 30, 52, 0);
+}
+
 /*.react-logo{
   position: relative;
   z-index: 999;
@@ -564,6 +573,19 @@ a:hover {
 } 
 
 /*SECTION 2*/
+
+#iphone-overlay{
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+
+  -webkit-transform: translate(0, -30%);
+
+      -ms-transform: translate(0, -30%);
+
+          transform: translate(0, -30%);
+  /*background-color: rgba(255, 0, 0, 0.3);*/
+}
 
 .iphone-demo {
   /*background-color: rgba(255,0,0,0.3);*/
@@ -603,16 +625,12 @@ a:hover {
 
 .feature-description {
   /*background-color: rgba(0,255,0,0.3);*/
-  -webkit-align-self: stretch;
-      -ms-flex-item-align: stretch;
-          align-self: stretch;
-  -webkit-box-flex: 1;
-  -webkit-flex-grow: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
-  -webkit-flex-basis: 0;
-      -ms-flex-preferred-size: 0;
-          flex-basis: 0;
+  /*align-self: stretch;*/
+  /*flex-grow: 1;*/
+  /*flex-basis: 0;*/
+  position: absolute;
+  width: 50%;
+  right: 0;
 }
 
 
