--- a/css/main.css
+++ b/css/main.css
@@ -81,6 +81,15 @@ a:hover {
   background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(31, 30, 52, 1));
 }
 
+#background-opacity{
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(31, 30, 52, 0);
+}
+
 /*.react-logo{
   position: relative;
   z-index: 999;
@@ -105,6 +114,15 @@ a:hover {
 
 /*SECTION 2*/
 
+#iphone-overlay{
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+
+  transform: translate(0, -30%);
+  /*background-color: rgba(255, 0, 0, 0.3);*/
+}
+
 .iphone-demo {
   /*background-color: rgba(255,0,0,0.3);*/
   align-self: stretch;
@@ -120,9 +138,12 @@ a:hover {
 
 .feature-description {
   /*background-color: rgba(0,255,0,0.3);*/
-  align-self: stretch;
-  flex-grow: 1;
-  flex-basis: 0;
+  /*align-self: stretch;*/
+  /*flex-grow: 1;*/
+  /*flex-basis: 0;*/
+  position: absolute;
+  width: 50%;
+  right: 0;
 }
 
 
